--- a/CarexLinkageMap.Rmd
+++ b/CarexLinkageMap.Rmd
@@ -1654,8 +1654,15 @@ Third, we get the genetic mapping of linkage groups
 set_map_fun(type="kosambi")
 
 LG.f2.6.0.5.1.sd2 <- make_seq(LGs.f2.6.0.5.sd2, 1)
+#0 hsd loci
 LG.f2.6.0.5.2.sd2 <- make_seq(LGs.f2.6.0.5.sd2, 2)
+#for the last one
 LG.f2.6.0.5.3.sd2 <- make_seq(LGs.f2.6.0.5.sd2, 3)
+#3 hsd loci 168,652 and 1122
+LG.f2.6.0.5.3.sd2 <- add_marker(LG.f2.6.0.5.3.sd2, c(168,652,1122))
+#
+#HASTA AQUI
+#
 LG.f2.6.0.5.4.sd2 <- make_seq(LGs.f2.6.0.5.sd2, 4)
 LG.f2.6.0.5.5.sd2 <- make_seq(LGs.f2.6.0.5.sd2, 5)
 LG.f2.6.0.5.6.sd2 <- make_seq(LGs.f2.6.0.5.sd2, 6)
@@ -1706,7 +1713,6 @@ LG.f2.6.0.5.15.ord.sd2 <- order_seq(LG.f2.6.0.5.15.sd2, n.init=5, subset.search 
 LG.f2.6.0.5.16.ord.sd2 <- order_seq(LG.f2.6.0.5.16.sd2, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3)
 LG.f2.6.0.5.17.ord.sd2 <- order_seq(LG.f2.6.0.5.17.sd2, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3)
 LG.f2.6.0.5.18.ord.sd2 <- order_seq(LG.f2.6.0.5.18.sd2, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3)
-#######hasta aqui
 LG.f2.6.0.5.19.ord.sd2 <- order_seq(LG.f2.6.0.5.19.sd2, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3)
 LG.f2.6.0.5.20.ord.sd2 <- order_seq(LG.f2.6.0.5.20.sd2, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3)
 LG.f2.6.0.5.21.ord.sd2 <- order_seq(LG.f2.6.0.5.21.sd2, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3)
@@ -1721,6 +1727,8 @@ LG.f2.6.0.5.29.ord.sd2 <- order_seq(LG.f2.6.0.5.29.sd2, n.init=5, subset.search 
 LG.f2.6.0.5.30.ord.sd2 <- order_seq(LG.f2.6.0.5.30.sd2, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3)
 LG.f2.6.0.5.31.ord.sd2 <- order_seq(LG.f2.6.0.5.31.sd2, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3)
 LG.f2.6.0.5.32.ord.sd2 <- order_seq(LG.f2.6.0.5.32.sd2, n.init=5, subset.search = "twopt", twopt.alg = "rcd", THRES = 3)
+
+
 
 
 ```
@@ -1794,83 +1802,87 @@ LG.f2.6.0.5.30.ord.all.sd2 <- make_seq(LG.f2.6.0.5.30.ord.sd2,"force")
 LG.f2.6.0.5.31.ord.all.sd2 <- make_seq(LG.f2.6.0.5.31.ord.sd2,"force")
 LG.f2.6.0.5.32.ord.all.sd2 <- make_seq(LG.f2.6.0.5.32.ord.sd2,"force")
 
+
+
+
 ```
 
 Drawing the genetic map
 
 ```{r}
-Map.6.0.5.ord.safe.sd <- list(
-LG.f2.6.0.5.1.ord.safe.sd, 
-LG.f2.6.0.5.2.ord.safe.sd, 
-LG.f2.6.0.5.3.ord.safe.sd, 
-LG.f2.6.0.5.4.ord.safe.sd, 
-LG.f2.6.0.5.5.ord.safe.sd, 
-LG.f2.6.0.5.6.ord.safe.sd, 
-LG.f2.6.0.5.7.ord.safe.sd, 
-LG.f2.6.0.5.8.ord.safe.sd, 
-LG.f2.6.0.5.9.ord.safe.sd, 
-LG.f2.6.0.5.10.ord.safe.sd,
-LG.f2.6.0.5.11.ord.safe.sd,
-LG.f2.6.0.5.12.ord.safe.sd,
-LG.f2.6.0.5.13.ord.safe.sd,
-LG.f2.6.0.5.14.ord.safe.sd,
-LG.f2.6.0.5.15.ord.safe.sd,
-LG.f2.6.0.5.16.ord.safe.sd,
-LG.f2.6.0.5.17.ord.safe.sd,
-LG.f2.6.0.5.18.ord.safe.sd,
-LG.f2.6.0.5.19.ord.safe.sd,
-LG.f2.6.0.5.20.ord.safe.sd,
-LG.f2.6.0.5.21.ord.safe.sd,
-LG.f2.6.0.5.22.ord.safe.sd,
-LG.f2.6.0.5.23.ord.safe.sd,
-LG.f2.6.0.5.24.ord.safe.sd,
-LG.f2.6.0.5.25.ord.safe.sd,
-LG.f2.6.0.5.26.ord.safe.sd,
-LG.f2.6.0.5.27.ord.safe.sd,
-LG.f2.6.0.5.28.ord.safe.sd,
-LG.f2.6.0.5.29.ord.safe.sd,
-LG.f2.6.0.5.30.ord.safe.sd,
-LG.f2.6.0.5.31.ord.safe.sd)
+Map.6.0.5.ord.safe.sd2 <- list(
+LG.f2.6.0.5.1.ord.safe.sd2, 
+LG.f2.6.0.5.2.ord.safe.sd2, 
+LG.f2.6.0.5.3.ord.safe.sd2, 
+LG.f2.6.0.5.4.ord.safe.sd2, 
+LG.f2.6.0.5.5.ord.safe.sd2, 
+LG.f2.6.0.5.6.ord.safe.sd2, 
+LG.f2.6.0.5.7.ord.safe.sd2, 
+LG.f2.6.0.5.8.ord.safe.sd2, 
+LG.f2.6.0.5.9.ord.safe.sd2, 
+LG.f2.6.0.5.10.ord.safe.sd2,
+LG.f2.6.0.5.11.ord.safe.sd2,
+LG.f2.6.0.5.12.ord.safe.sd2,
+LG.f2.6.0.5.13.ord.safe.sd2,
+LG.f2.6.0.5.14.ord.safe.sd2,
+LG.f2.6.0.5.15.ord.safe.sd2,
+LG.f2.6.0.5.16.ord.safe.sd2,
+LG.f2.6.0.5.17.ord.safe.sd2,
+LG.f2.6.0.5.18.ord.safe.sd2,
+LG.f2.6.0.5.19.ord.safe.sd2,
+LG.f2.6.0.5.20.ord.safe.sd2,
+LG.f2.6.0.5.21.ord.safe.sd2,
+LG.f2.6.0.5.22.ord.safe.sd2,
+LG.f2.6.0.5.23.ord.safe.sd2,
+LG.f2.6.0.5.24.ord.safe.sd2,
+LG.f2.6.0.5.25.ord.safe.sd2,
+LG.f2.6.0.5.26.ord.safe.sd2,
+LG.f2.6.0.5.27.ord.safe.sd2,
+LG.f2.6.0.5.28.ord.safe.sd2,
+LG.f2.6.0.5.29.ord.safe.sd2,
+LG.f2.6.0.5.30.ord.safe.sd2,
+LG.f2.6.0.5.31.ord.safe.sd2,
+LG.f2.6.0.5.32.ord.safe.sd2)
 
-Map.6.0.5.ord.all.sd <- list(
-LG.f2.6.0.5.1.ord.all.sd, 
-LG.f2.6.0.5.2.ord.all.sd, 
-LG.f2.6.0.5.3.ord.all.sd, 
-LG.f2.6.0.5.4.ord.all.sd, 
-LG.f2.6.0.5.5.ord.all.sd, 
-LG.f2.6.0.5.6.ord.all.sd, 
-LG.f2.6.0.5.7.ord.all.sd, 
-LG.f2.6.0.5.8.ord.all.sd, 
-LG.f2.6.0.5.9.ord.all.sd, 
-LG.f2.6.0.5.10.ord.all.sd,
-LG.f2.6.0.5.11.ord.all.sd,
-LG.f2.6.0.5.12.ord.all.sd,
-LG.f2.6.0.5.13.ord.all.sd,
-LG.f2.6.0.5.14.ord.all.sd,
-LG.f2.6.0.5.15.ord.all.sd,
-LG.f2.6.0.5.16.ord.all.sd,
-LG.f2.6.0.5.17.ord.all.sd,
-LG.f2.6.0.5.18.ord.all.sd,
-LG.f2.6.0.5.19.ord.all.sd,
-LG.f2.6.0.5.20.ord.all.sd,
-LG.f2.6.0.5.21.ord.all.sd,
-LG.f2.6.0.5.22.ord.all.sd,
-LG.f2.6.0.5.23.ord.all.sd,
-LG.f2.6.0.5.24.ord.all.sd,
-LG.f2.6.0.5.25.ord.all.sd,
-LG.f2.6.0.5.26.ord.all.sd,
-LG.f2.6.0.5.27.ord.all.sd,
-LG.f2.6.0.5.28.ord.all.sd,
-LG.f2.6.0.5.29.ord.all.sd,
-LG.f2.6.0.5.30.ord.all.sd,
-LG.f2.6.0.5.31.ord.all.sd)
+Map.6.0.5.ord.all.sd2 <- list(
+LG.f2.6.0.5.1.ord.all.sd2, 
+LG.f2.6.0.5.2.ord.all.sd2, 
+LG.f2.6.0.5.3.ord.all.sd2, 
+LG.f2.6.0.5.4.ord.all.sd2, 
+LG.f2.6.0.5.5.ord.all.sd2, 
+LG.f2.6.0.5.6.ord.all.sd2, 
+LG.f2.6.0.5.7.ord.all.sd2, 
+LG.f2.6.0.5.8.ord.all.sd2, 
+LG.f2.6.0.5.9.ord.all.sd2, 
+LG.f2.6.0.5.10.ord.all.sd2,
+LG.f2.6.0.5.11.ord.all.sd2,
+LG.f2.6.0.5.12.ord.all.sd2,
+LG.f2.6.0.5.13.ord.all.sd2,
+LG.f2.6.0.5.14.ord.all.sd2,
+LG.f2.6.0.5.15.ord.all.sd2,
+LG.f2.6.0.5.16.ord.all.sd2,
+LG.f2.6.0.5.17.ord.all.sd2,
+LG.f2.6.0.5.18.ord.all.sd2,
+LG.f2.6.0.5.19.ord.all.sd2,
+LG.f2.6.0.5.20.ord.all.sd2,
+LG.f2.6.0.5.21.ord.all.sd2,
+LG.f2.6.0.5.22.ord.all.sd2,
+LG.f2.6.0.5.23.ord.all.sd2,
+LG.f2.6.0.5.24.ord.all.sd2,
+LG.f2.6.0.5.25.ord.all.sd2,
+LG.f2.6.0.5.26.ord.all.sd2,
+LG.f2.6.0.5.27.ord.all.sd2,
+LG.f2.6.0.5.28.ord.all.sd2,
+LG.f2.6.0.5.29.ord.all.sd2,
+LG.f2.6.0.5.30.ord.all.sd2,
+LG.f2.6.0.5.31.ord.all.sd2)
 
-pdf("Map.6.0.5.ord.safe.sd.pdf")
-draw_map(Map.6.0.5.ord.safe.sd, names= TRUE, grid=TRUE, cex.mrk=0.3)
+pdf("Map.6.0.5.ord.safe.sd2.pdf")
+draw_map(Map.6.0.5.ord.safe.sd2, names= TRUE, grid=TRUE, cex.mrk=0.3)
 dev.off()
 
-pdf("Map.6.0.5.ord.all.sd.pdf")
-draw_map(Map.6.0.5.ord.all.sd, names= TRUE, grid=TRUE, cex.mrk=0.3)
+pdf("Map.6.0.5.ord.all.sd2.pdf")
+draw_map(Map.6.0.5.ord.all.sd2, names= TRUE, grid=TRUE, cex.mrk=0.3)
 dev.off()
 
 ```
