Finish second review2

--- a/CarexLinkageMap.Rmd
+++ b/CarexLinkageMap.Rmd
@@ -1903,78 +1903,324 @@ LG.f2.6.0.5.32.ord.all.sd2 <- make_seq(LG.f2.6.0.5.32.ord.sd2,"force")
 Drawing the genetic map
 
 ```{r}
-Map.6.0.5.ord.safe.sd <- list(
-LG.f2.6.0.5.1.ord.safe.sd, 
-LG.f2.6.0.5.2.ord.safe.sd, 
-LG.f2.6.0.5.3.ord.safe.sd, 
-LG.f2.6.0.5.4.ord.safe.sd, 
-LG.f2.6.0.5.5.ord.safe.sd, 
-LG.f2.6.0.5.6.ord.safe.sd, 
-LG.f2.6.0.5.7.ord.safe.sd, 
-LG.f2.6.0.5.8.ord.safe.sd, 
-LG.f2.6.0.5.9.ord.safe.sd, 
-LG.f2.6.0.5.10.ord.safe.sd,
-LG.f2.6.0.5.11.ord.safe.sd,
-LG.f2.6.0.5.12.ord.safe.sd,
-LG.f2.6.0.5.13.ord.safe.sd,
-LG.f2.6.0.5.14.ord.safe.sd,
-LG.f2.6.0.5.15.ord.safe.sd,
-LG.f2.6.0.5.16.ord.safe.sd,
-LG.f2.6.0.5.17.ord.safe.sd,
-LG.f2.6.0.5.18.ord.safe.sd,
-LG.f2.6.0.5.19.ord.safe.sd,
-LG.f2.6.0.5.20.ord.safe.sd,
-LG.f2.6.0.5.21.ord.safe.sd,
-LG.f2.6.0.5.22.ord.safe.sd,
-LG.f2.6.0.5.23.ord.safe.sd,
-LG.f2.6.0.5.24.ord.safe.sd,
-LG.f2.6.0.5.25.ord.safe.sd,
-LG.f2.6.0.5.26.ord.safe.sd,
-LG.f2.6.0.5.27.ord.safe.sd,
-LG.f2.6.0.5.28.ord.safe.sd,
-LG.f2.6.0.5.29.ord.safe.sd,
-LG.f2.6.0.5.30.ord.safe.sd,
-LG.f2.6.0.5.31.ord.safe.sd)
+Map.6.0.5.ord.safe.sd2 <- list(
+LG.f2.6.0.5.1.ord.safe.sd2, 
+LG.f2.6.0.5.2.ord.safe.sd2, 
+LG.f2.6.0.5.3.ord.safe.sd2, 
+LG.f2.6.0.5.4.ord.safe.sd2, 
+LG.f2.6.0.5.5.ord.safe.sd2, 
+LG.f2.6.0.5.6.ord.safe.sd2, 
+LG.f2.6.0.5.7.ord.safe.sd2, 
+LG.f2.6.0.5.8.ord.safe.sd2, 
+LG.f2.6.0.5.9.ord.safe.sd2, 
+LG.f2.6.0.5.10.ord.safe.sd2,
+LG.f2.6.0.5.11.ord.safe.sd2,
+LG.f2.6.0.5.12.ord.safe.sd2,
+LG.f2.6.0.5.13.ord.safe.sd2,
+LG.f2.6.0.5.14.ord.safe.sd2,
+LG.f2.6.0.5.15.ord.safe.sd2,
+LG.f2.6.0.5.16.ord.safe.sd2,
+LG.f2.6.0.5.17.ord.safe.sd2,
+LG.f2.6.0.5.18.ord.safe.sd2,
+LG.f2.6.0.5.19.ord.safe.sd2,
+LG.f2.6.0.5.20.ord.safe.sd2,
+LG.f2.6.0.5.21.ord.safe.sd2,
+LG.f2.6.0.5.22.ord.safe.sd2,
+LG.f2.6.0.5.23.ord.safe.sd2,
+LG.f2.6.0.5.24.ord.safe.sd2,
+LG.f2.6.0.5.25.ord.safe.sd2,
+LG.f2.6.0.5.26.ord.safe.sd2,
+LG.f2.6.0.5.27.ord.safe.sd2,
+LG.f2.6.0.5.28.ord.safe.sd2,
+LG.f2.6.0.5.29.ord.safe.sd2,
+LG.f2.6.0.5.30.ord.safe.sd2,
+LG.f2.6.0.5.31.ord.safe.sd2,
+LG.f2.6.0.5.32.ord.safe.sd2)
 
-Map.6.0.5.ord.all.sd <- list(
-LG.f2.6.0.5.1.ord.all.sd, 
-LG.f2.6.0.5.2.ord.all.sd, 
-LG.f2.6.0.5.3.ord.all.sd, 
-LG.f2.6.0.5.4.ord.all.sd, 
-LG.f2.6.0.5.5.ord.all.sd, 
-LG.f2.6.0.5.6.ord.all.sd, 
-LG.f2.6.0.5.7.ord.all.sd, 
-LG.f2.6.0.5.8.ord.all.sd, 
-LG.f2.6.0.5.9.ord.all.sd, 
-LG.f2.6.0.5.10.ord.all.sd,
-LG.f2.6.0.5.11.ord.all.sd,
-LG.f2.6.0.5.12.ord.all.sd,
-LG.f2.6.0.5.13.ord.all.sd,
-LG.f2.6.0.5.14.ord.all.sd,
-LG.f2.6.0.5.15.ord.all.sd,
-LG.f2.6.0.5.16.ord.all.sd,
-LG.f2.6.0.5.17.ord.all.sd,
-LG.f2.6.0.5.18.ord.all.sd,
-LG.f2.6.0.5.19.ord.all.sd,
-LG.f2.6.0.5.20.ord.all.sd,
-LG.f2.6.0.5.21.ord.all.sd,
-LG.f2.6.0.5.22.ord.all.sd,
-LG.f2.6.0.5.23.ord.all.sd,
-LG.f2.6.0.5.24.ord.all.sd,
-LG.f2.6.0.5.25.ord.all.sd,
-LG.f2.6.0.5.26.ord.all.sd,
-LG.f2.6.0.5.27.ord.all.sd,
-LG.f2.6.0.5.28.ord.all.sd,
-LG.f2.6.0.5.29.ord.all.sd,
-LG.f2.6.0.5.30.ord.all.sd,
-LG.f2.6.0.5.31.ord.all.sd)
+Map.6.0.5.ord.all.sd2 <- list(
+LG.f2.6.0.5.1.ord.all.sd2, 
+LG.f2.6.0.5.2.ord.all.sd2, 
+LG.f2.6.0.5.3.ord.all.sd2, 
+LG.f2.6.0.5.4.ord.all.sd2, 
+LG.f2.6.0.5.5.ord.all.sd2, 
+LG.f2.6.0.5.6.ord.all.sd2, 
+LG.f2.6.0.5.7.ord.all.sd2, 
+LG.f2.6.0.5.8.ord.all.sd2, 
+LG.f2.6.0.5.9.ord.all.sd2, 
+LG.f2.6.0.5.10.ord.all.sd2,
+LG.f2.6.0.5.11.ord.all.sd2,
+LG.f2.6.0.5.12.ord.all.sd2,
+LG.f2.6.0.5.13.ord.all.sd2,
+LG.f2.6.0.5.14.ord.all.sd2,
+LG.f2.6.0.5.15.ord.all.sd2,
+LG.f2.6.0.5.16.ord.all.sd2,
+LG.f2.6.0.5.17.ord.all.sd2,
+LG.f2.6.0.5.18.ord.all.sd2,
+LG.f2.6.0.5.19.ord.all.sd2,
+LG.f2.6.0.5.20.ord.all.sd2,
+LG.f2.6.0.5.21.ord.all.sd2,
+LG.f2.6.0.5.22.ord.all.sd2,
+LG.f2.6.0.5.23.ord.all.sd2,
+LG.f2.6.0.5.24.ord.all.sd2,
+LG.f2.6.0.5.25.ord.all.sd2,
+LG.f2.6.0.5.26.ord.all.sd2,
+LG.f2.6.0.5.27.ord.all.sd2,
+LG.f2.6.0.5.28.ord.all.sd2,
+LG.f2.6.0.5.29.ord.all.sd2,
+LG.f2.6.0.5.30.ord.all.sd2,
+LG.f2.6.0.5.31.ord.all.sd2,
+LG.f2.6.0.5.32.ord.all.sd2)
 
-pdf("Map.6.0.5.ord.safe.sd.pdf")
-draw_map(Map.6.0.5.ord.safe.sd, names= TRUE, grid=TRUE, cex.mrk=0.3)
+pdf("Map.6.0.5.ord.safe.sd2.pdf")
+draw_map(Map.6.0.5.ord.safe.sd2, names= TRUE, grid=TRUE, cex.mrk=0.3)
 dev.off()
 
-pdf("Map.6.0.5.ord.all.sd.pdf")
-draw_map(Map.6.0.5.ord.all.sd, names= TRUE, grid=TRUE, cex.mrk=0.3)
+pdf("Map.6.0.5.ord.all.sd2.pdf")
+draw_map(Map.6.0.5.ord.all.sd2, names= TRUE, grid=TRUE, cex.mrk=0.3)
 dev.off()
 
 ```
+
+Linage group 2 has more of 50 cM between the majority of the markers and one remaining
+
+```{r}
+
+LG.f2.6.0.5.2.ord.safe2.sd2 <- LG.f2.6.0.5.2.ord.safe.sd2
+LG.f2.6.0.5.2.ord.safe2.sd2$seq.rf <- LG.f2.6.0.5.2.ord.safe.sd2$seq.rf[-1]
+LG.f2.6.0.5.2.ord.safe2.sd2$seq.phases <- LG.f2.6.0.5.2.ord.safe.sd2$seq.phases[-1]
+LG.f2.6.0.5.2.ord.safe2.sd2$seq.num <- LG.f2.6.0.5.2.ord.safe.sd2$seq.num[-1]
+LG.f2.6.0.5.2.ord.safe2.sd2
+
+Map.6.0.5.ord.safe2.sd2 <- list(
+LG.f2.6.0.5.1.ord.safe.sd2, 
+LG.f2.6.0.5.2.ord.safe2.sd2, 
+LG.f2.6.0.5.3.ord.safe.sd2, 
+LG.f2.6.0.5.4.ord.safe.sd2, 
+LG.f2.6.0.5.5.ord.safe.sd2, 
+LG.f2.6.0.5.6.ord.safe.sd2, 
+LG.f2.6.0.5.7.ord.safe.sd2, 
+LG.f2.6.0.5.8.ord.safe.sd2, 
+LG.f2.6.0.5.9.ord.safe.sd2, 
+LG.f2.6.0.5.10.ord.safe.sd2,
+LG.f2.6.0.5.11.ord.safe.sd2,
+LG.f2.6.0.5.12.ord.safe.sd2,
+LG.f2.6.0.5.13.ord.safe.sd2,
+LG.f2.6.0.5.14.ord.safe.sd2,
+LG.f2.6.0.5.15.ord.safe.sd2,
+LG.f2.6.0.5.16.ord.safe.sd2,
+LG.f2.6.0.5.17.ord.safe.sd2,
+LG.f2.6.0.5.18.ord.safe.sd2,
+LG.f2.6.0.5.19.ord.safe.sd2,
+LG.f2.6.0.5.20.ord.safe.sd2,
+LG.f2.6.0.5.21.ord.safe.sd2,
+LG.f2.6.0.5.22.ord.safe.sd2,
+LG.f2.6.0.5.23.ord.safe.sd2,
+LG.f2.6.0.5.24.ord.safe.sd2,
+LG.f2.6.0.5.25.ord.safe.sd2,
+LG.f2.6.0.5.26.ord.safe.sd2,
+LG.f2.6.0.5.27.ord.safe.sd2,
+LG.f2.6.0.5.28.ord.safe.sd2,
+LG.f2.6.0.5.29.ord.safe.sd2,
+LG.f2.6.0.5.30.ord.safe.sd2,
+LG.f2.6.0.5.31.ord.safe.sd2,
+LG.f2.6.0.5.32.ord.safe.sd2)
+
+pdf("Map.6.0.5.ord.safe2.sd2.pdf")
+draw_map(Map.6.0.5.ord.safe2.sd2, names= TRUE, grid=TRUE, cex.mrk=0.3)
+dev.off()
+```
+
+Linage group 2 has more of 50 cM between the majority of the markers and 13 at the end
+
+```{r}
+
+LG.f2.6.0.5.2.ord.safe3.sd2 <- LG.f2.6.0.5.2.ord.safe2.sd2
+LG.f2.6.0.5.2.ord.safe3.sd2$seq.num <- LG.f2.6.0.5.2.ord.safe2.sd2$seq.num[1:23]
+LG.f2.6.0.5.2.ord.safe3.sd2$seq.rf <- LG.f2.6.0.5.2.ord.safe2.sd2$seq.rf[1:22]
+LG.f2.6.0.5.2.ord.safe3.sd2$seq.phases <- LG.f2.6.0.5.2.ord.safe2.sd2$seq.phases[1:22]
+LG.f2.6.0.5.2.ord.safe3.sd2
+
+Map.6.0.5.ord.safe3.sd2 <- list(
+LG.f2.6.0.5.1.ord.safe.sd2, 
+LG.f2.6.0.5.2.ord.safe3.sd2, 
+LG.f2.6.0.5.3.ord.safe.sd2, 
+LG.f2.6.0.5.4.ord.safe.sd2, 
+LG.f2.6.0.5.5.ord.safe.sd2, 
+LG.f2.6.0.5.6.ord.safe.sd2, 
+LG.f2.6.0.5.7.ord.safe.sd2, 
+LG.f2.6.0.5.8.ord.safe.sd2, 
+LG.f2.6.0.5.9.ord.safe.sd2, 
+LG.f2.6.0.5.10.ord.safe.sd2,
+LG.f2.6.0.5.11.ord.safe.sd2,
+LG.f2.6.0.5.12.ord.safe.sd2,
+LG.f2.6.0.5.13.ord.safe.sd2,
+LG.f2.6.0.5.14.ord.safe.sd2,
+LG.f2.6.0.5.15.ord.safe.sd2,
+LG.f2.6.0.5.16.ord.safe.sd2,
+LG.f2.6.0.5.17.ord.safe.sd2,
+LG.f2.6.0.5.18.ord.safe.sd2,
+LG.f2.6.0.5.19.ord.safe.sd2,
+LG.f2.6.0.5.20.ord.safe.sd2,
+LG.f2.6.0.5.21.ord.safe.sd2,
+LG.f2.6.0.5.22.ord.safe.sd2,
+LG.f2.6.0.5.23.ord.safe.sd2,
+LG.f2.6.0.5.24.ord.safe.sd2,
+LG.f2.6.0.5.25.ord.safe.sd2,
+LG.f2.6.0.5.26.ord.safe.sd2,
+LG.f2.6.0.5.27.ord.safe.sd2,
+LG.f2.6.0.5.28.ord.safe.sd2,
+LG.f2.6.0.5.29.ord.safe.sd2,
+LG.f2.6.0.5.30.ord.safe.sd2,
+LG.f2.6.0.5.31.ord.safe.sd2,
+LG.f2.6.0.5.32.ord.safe.sd2)
+
+pdf("Map.6.0.5.ord.safe3.sd2.pdf")
+draw_map(Map.6.0.5.ord.safe3.sd2, names= TRUE, grid=TRUE, cex.mrk=0.3)
+dev.off()
+```
+
+
+Linage group 2 has more of 50 cM between the majority of the markers and 13 at the end
+
+```{r}
+
+LG.f2.6.0.5.17.ord.safe2.sd2 <- LG.f2.6.0.5.17.ord.safe.sd2
+LG.f2.6.0.5.17.ord.safe2.sd2$seq.num <- LG.f2.6.0.5.17.ord.safe.sd2$seq.num[1:47]
+LG.f2.6.0.5.17.ord.safe2.sd2$seq.rf <- LG.f2.6.0.5.17.ord.safe.sd2$seq.rf[1:46]
+LG.f2.6.0.5.17.ord.safe2.sd2$seq.phases <- LG.f2.6.0.5.17.ord.safe.sd2$seq.phases[1:46]
+LG.f2.6.0.5.17.ord.safe2.sd2
+
+Map.6.0.5.ord.safe4.sd2 <- list(
+LG.f2.6.0.5.1.ord.safe.sd2, 
+LG.f2.6.0.5.2.ord.safe3.sd2, 
+LG.f2.6.0.5.3.ord.safe.sd2, 
+LG.f2.6.0.5.4.ord.safe.sd2, 
+LG.f2.6.0.5.5.ord.safe.sd2, 
+LG.f2.6.0.5.6.ord.safe.sd2, 
+LG.f2.6.0.5.7.ord.safe.sd2, 
+LG.f2.6.0.5.8.ord.safe.sd2, 
+LG.f2.6.0.5.9.ord.safe.sd2, 
+LG.f2.6.0.5.10.ord.safe.sd2,
+LG.f2.6.0.5.11.ord.safe.sd2,
+LG.f2.6.0.5.12.ord.safe.sd2,
+LG.f2.6.0.5.13.ord.safe.sd2,
+LG.f2.6.0.5.14.ord.safe.sd2,
+LG.f2.6.0.5.15.ord.safe.sd2,
+LG.f2.6.0.5.16.ord.safe.sd2,
+LG.f2.6.0.5.17.ord.safe2.sd2,
+LG.f2.6.0.5.18.ord.safe.sd2,
+LG.f2.6.0.5.19.ord.safe.sd2,
+LG.f2.6.0.5.20.ord.safe.sd2,
+LG.f2.6.0.5.21.ord.safe.sd2,
+LG.f2.6.0.5.22.ord.safe.sd2,
+LG.f2.6.0.5.23.ord.safe.sd2,
+LG.f2.6.0.5.24.ord.safe.sd2,
+LG.f2.6.0.5.25.ord.safe.sd2,
+LG.f2.6.0.5.26.ord.safe.sd2,
+LG.f2.6.0.5.27.ord.safe.sd2,
+LG.f2.6.0.5.28.ord.safe.sd2,
+LG.f2.6.0.5.29.ord.safe.sd2,
+LG.f2.6.0.5.30.ord.safe.sd2,
+LG.f2.6.0.5.31.ord.safe.sd2,
+LG.f2.6.0.5.32.ord.safe.sd2)
+
+pdf("Map.6.0.5.ord.safe4.sd2.pdf")
+draw_map(Map.6.0.5.ord.safe4.sd2, names= TRUE, grid=TRUE, cex.mrk=0.3)
+dev.off()
+```
+
+Linage group 24 has more of 50 cM between the majority of the markers and the remaining 8
+
+```{r}
+
+LG.f2.6.0.5.24.ord.safe2.sd2 <- LG.f2.6.0.5.24.ord.safe.sd2
+LG.f2.6.0.5.24.ord.safe2.sd2$seq.rf <- LG.f2.6.0.5.24.ord.safe.sd2$seq.rf[-c(1:8)]
+LG.f2.6.0.5.24.ord.safe2.sd2$seq.phases <- LG.f2.6.0.5.24.ord.safe.sd2$seq.phases[-c(1:8)]
+LG.f2.6.0.5.24.ord.safe2.sd2$seq.num <- LG.f2.6.0.5.24.ord.safe.sd2$seq.num[-c(1:8)]
+LG.f2.6.0.5.24.ord.safe2.sd2
+
+Map.6.0.5.ord.safe5.sd2 <- list(
+LG.f2.6.0.5.1.ord.safe.sd2, 
+LG.f2.6.0.5.2.ord.safe3.sd2, 
+LG.f2.6.0.5.3.ord.safe.sd2, 
+LG.f2.6.0.5.4.ord.safe.sd2, 
+LG.f2.6.0.5.5.ord.safe.sd2, 
+LG.f2.6.0.5.6.ord.safe.sd2, 
+LG.f2.6.0.5.7.ord.safe.sd2, 
+LG.f2.6.0.5.8.ord.safe.sd2, 
+LG.f2.6.0.5.9.ord.safe.sd2, 
+LG.f2.6.0.5.10.ord.safe.sd2,
+LG.f2.6.0.5.11.ord.safe.sd2,
+LG.f2.6.0.5.12.ord.safe.sd2,
+LG.f2.6.0.5.13.ord.safe.sd2,
+LG.f2.6.0.5.14.ord.safe.sd2,
+LG.f2.6.0.5.15.ord.safe.sd2,
+LG.f2.6.0.5.16.ord.safe.sd2,
+LG.f2.6.0.5.17.ord.safe2.sd2,
+LG.f2.6.0.5.18.ord.safe.sd2,
+LG.f2.6.0.5.19.ord.safe.sd2,
+LG.f2.6.0.5.20.ord.safe.sd2,
+LG.f2.6.0.5.21.ord.safe.sd2,
+LG.f2.6.0.5.22.ord.safe.sd2,
+LG.f2.6.0.5.23.ord.safe.sd2,
+LG.f2.6.0.5.24.ord.safe2.sd2,
+LG.f2.6.0.5.25.ord.safe.sd2,
+LG.f2.6.0.5.26.ord.safe.sd2,
+LG.f2.6.0.5.27.ord.safe.sd2,
+LG.f2.6.0.5.28.ord.safe.sd2,
+LG.f2.6.0.5.29.ord.safe.sd2,
+LG.f2.6.0.5.30.ord.safe.sd2,
+LG.f2.6.0.5.31.ord.safe.sd2,
+LG.f2.6.0.5.32.ord.safe.sd2)
+
+pdf("Map.6.0.5.ord.safe5.sd2.pdf")
+draw_map(Map.6.0.5.ord.safe5.sd2, names= TRUE, grid=TRUE, cex.mrk=0.3)
+dev.off()
+```
+
+Finally, the linkage group 25 have over 40 cM between the majority of the markers and the last one
+
+
+```{r}
+
+LG.f2.6.0.5.25.ord.safe2 <- LG.f2.6.0.5.25.ord.safe
+LG.f2.6.0.5.25.ord.safe2$seq.num <- LG.f2.6.0.5.25.ord.safe$seq.num[1:19]
+LG.f2.6.0.5.25.ord.safe2$seq.rf <- LG.f2.6.0.5.25.ord.safe$seq.rf[1:18]
+LG.f2.6.0.5.25.ord.safe2$seq.phases <- LG.f2.6.0.5.25.ord.safe$seq.phases[1:18]
+LG.f2.6.0.5.25.ord.safe2
+
+Map.6.0.5.ord.safe4 <- list(
+LG.f2.6.0.5.1.ord.safe, 
+LG.f2.6.0.5.2.ord.safe2, 
+LG.f2.6.0.5.3.ord.safe, 
+LG.f2.6.0.5.4.ord.safe, 
+LG.f2.6.0.5.5.ord.safe, 
+LG.f2.6.0.5.6.ord.safe, 
+LG.f2.6.0.5.7.ord.safe, 
+LG.f2.6.0.5.8.ord.safe, 
+LG.f2.6.0.5.9.ord.safe, 
+LG.f2.6.0.5.10.ord.safe,
+LG.f2.6.0.5.11.ord.safe,
+LG.f2.6.0.5.12.ord.safe,
+LG.f2.6.0.5.13.ord.safe,
+LG.f2.6.0.5.14.ord.safe,
+LG.f2.6.0.5.15.ord.safe,
+LG.f2.6.0.5.16.ord.safe,
+LG.f2.6.0.5.17.ord.safe,
+LG.f2.6.0.5.18.ord.safe,
+LG.f2.6.0.5.19.ord.safe,
+LG.f2.6.0.5.20.ord.safe,
+LG.f2.6.0.5.21.ord.safe,
+LG.f2.6.0.5.22.ord.safe,
+LG.f2.6.0.5.23.ord.safe,
+LG.f2.6.0.5.24.ord.safe2,
+LG.f2.6.0.5.25.ord.safe2,
+LG.f2.6.0.5.26.ord.safe,
+LG.f2.6.0.5.27.ord.safe,
+LG.f2.6.0.5.28.ord.safe,
+LG.f2.6.0.5.29.ord.safe,
+LG.f2.6.0.5.30.ord.safe,
+LG.f2.6.0.5.31.ord.safe,
+LG.f2.6.0.5.32.ord.safe)
+
+draw.map(Map.6.0.5.ord.safe4, names= TRUE, grid=TRUE, cex.mrk=0.3)
